feature(sln): lab2 initialize

--- a/dblabs/Properties/Settings.settings
+++ b/dblabs/Properties/Settings.settings
@@ -10,5 +10,11 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=LENOVO_GL\SQLEXPRESS;Initial Catalog=faculty;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="Settings" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
+    <Setting Name="FormPosition" Type="System.Drawing.Point" Scope="User">
+      <Value Profile="(Default)">0, 0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
