--- a/dblabs/App.config
+++ b/dblabs/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="dblabs.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="dblabs.Properties.Settings.facultyConnectionString"
@@ -10,4 +13,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <dblabs.Properties.Settings>
+            <setting name="Settings" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="FormPosition" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+        </dblabs.Properties.Settings>
+    </userSettings>
 </configuration>
