--- a/dblabs/dblabs.csproj
+++ b/dblabs/dblabs.csproj
@@ -46,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Disciplines.cs">
+    <Compile Include="DisciplinesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Disciplines.Designer.cs">
-      <DependentUpon>Disciplines.cs</DependentUpon>
+    <Compile Include="DisciplinesForm.Designer.cs">
+      <DependentUpon>DisciplinesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="facultyDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -63,34 +63,37 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Groups.cs">
+    <Compile Include="GroupsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Groups.Designer.cs">
-      <DependentUpon>Groups.cs</DependentUpon>
+    <Compile Include="GroupsForm.Designer.cs">
+      <DependentUpon>GroupsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LearningDisciplinesByStudents.cs">
+    <Compile Include="LearningDisciplinesByStudentsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LearningDisciplinesByStudents.Designer.cs">
-      <DependentUpon>LearningDisciplinesByStudents.cs</DependentUpon>
+    <Compile Include="LearningDisciplinesByStudentsForm.Designer.cs">
+      <DependentUpon>LearningDisciplinesByStudentsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Students.cs">
+    <Compile Include="StudentsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Students.Designer.cs">
-      <DependentUpon>Students.cs</DependentUpon>
+    <Compile Include="StudentsForm.Designer.cs">
+      <DependentUpon>StudentsForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Disciplines.resx">
-      <DependentUpon>Disciplines.cs</DependentUpon>
+    <EmbeddedResource Include="DisciplinesForm.resx">
+      <DependentUpon>DisciplinesForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Groups.resx">
-      <DependentUpon>Groups.cs</DependentUpon>
+    <EmbeddedResource Include="GroupsForm.resx">
+      <DependentUpon>GroupsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LearningDisciplinesByStudents.resx">
-      <DependentUpon>LearningDisciplinesByStudents.cs</DependentUpon>
+    <EmbeddedResource Include="LearningDisciplinesByStudentsForm.resx">
+      <DependentUpon>LearningDisciplinesByStudentsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -101,8 +104,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Students.resx">
-      <DependentUpon>Students.cs</DependentUpon>
+    <EmbeddedResource Include="StudentsForm.resx">
+      <DependentUpon>StudentsForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="facultyDataSet.xsc">
       <DependentUpon>facultyDataSet.xsd</DependentUpon>
